[tool.poetry]
name = "14-1-oop-hw-1"
version = "0.1.0"
description = ""
authors = ["Dmitry Minin <d.n.minin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
